# QuasiX

./: .gitignore  .gitignore.public  .readthedocs.yaml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  push_to_public.sh
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci.yml.disabled  publish.yml
containers/: Dockerfile  docker-compose.yml
public_docs/: API.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  QUICKSTART.md  README.md  THEORY.md  requirements-docs.txt
public_docs/source/: benchmarks.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
quasix/: Cargo.toml  pyproject.toml  requirements-lock.txt
quasix-cli/: Cargo.toml
quasix-cli/src/: gw.rs  main.rs  utils.rs
quasix-cli/src/commands/: compare.rs  mod.rs
quasix/comparison_results/: cd_vs_ac_report_20250923_222314.html
quasix/src/: analytic_continuation.rs  bse.rs  evgw.rs  io_hdf5.rs  lib.rs  pyscf_adapter.rs  schema.rs
quasix/tests/: test_basic.py  test_dielectric.py  test_koopmans_validation.py
quasix_core/: Cargo.toml
quasix_core/benches/: condition_monitoring.rs  convergence_simd_bench.rs  correlation_bench.rs  df_performance_profile.rs  energy_dependent_optimized_bench.rs  evgw_optimized_bench.rs  mo_transform_blas_only.rs  monitoring_bench.rs  numa_allocation_bench.rs  polarizability_builder_simd_bench.rs  polarizability_hpc_bench.rs  polarizability_optimized_bench.rs  polarizability_simd_bench.rs  qp_solver_simd_bench.rs  screening_bench.rs  screening_enhanced_bench.rs  spectral_bench.rs  test_exchange_performance.rs  unified_screening_bench.rs  w_interpolation_simd_bench.rs
quasix_core/examples/: benchmark_screening.rs  condition_monitoring_demo.rs  frozen_core_evgw.rs  monitor_demo.rs  (+12 more)
(+95 files in other folders)
